BB-4667: Horizontal scroll on Order History page  - fixed horizontal scroll using css

--- a/src/Oro/Bundle/FrontendBundle/Resources/public/default/scss/_legacy/current-grid/current-grid.scss
+++ b/src/Oro/Bundle/FrontendBundle/Resources/public/default/scss/_legacy/current-grid/current-grid.scss
@@ -431,6 +431,12 @@
       margin-top: 0;
       padding: 20px;
 
+      &:not([style]),
+      &[style*=hidden] {
+        right: 0;
+        left: auto;
+      }
+
       &.dropdown-menu {
         @media (max-width: $screen-md) {
           left: -20px;
